Fixed menu spacing

--- a/src/Menu/Menu.scss
+++ b/src/Menu/Menu.scss
@@ -22,6 +22,7 @@ nav {
   width: 100vw;
   align-items: center;
   z-index: 2;
+  padding-left: 30px;
 }
 
 .menu img {
